[CDAP-14272] Fixes deleting empty custom config causing broken UI, and fixes regression in pipeline top panel buttons - Fixes deleting empty custom config - Removes shouldComponentUpdate altogether - Fixes various JS issues in components using key value pairs - Fixes border top of stop and run buttons to not disappear on hover

--- a/cdap-ui/app/cdap/components/PipelineDetails/PipelineDetailsTopPanel/PipelineDetailsTopPanel.scss
+++ b/cdap-ui/app/cdap/components/PipelineDetails/PipelineDetailsTopPanel/PipelineDetailsTopPanel.scss
@@ -182,6 +182,7 @@ $btn-border-color: transparent;
       display: inline-flex;
       &:hover {
         background-color: inherit;
+        border-top: 1px solid $grey-05;
       }
     }
 
